fix cart functionality
